kubernetes/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: calculatrice-ingress
  namespace: darren-marie
  annotations:
    kubernetes.io/ingress.class: nginx
    
spec:
  rules:
  - host: calculatrice-darren-marie.polytech-dijon.kiowy.net
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 8000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
